# loongarch-glibc-oldworld

./: Makefile  Makefile.help  config.h.in  config.make.in  configure  configure.ac
sysdeps/loongarch/: Makefile  __longjmp.S  at_quick_exit.c  atexit.c  configure  configure.ac  cpu-tunables.c  dl-get-cpu-features.c  dl-irel.h  dl-machine.h  dl-tls.h  dl-trampoline.S  dl-trampoline.h  dl-tunables.list  e_sqrtl.c  elf-init.c  fstat.c  fstat64.c  fstatat.c  fstatat64.c  gccframe.h  hp-timing.h  init-arch.h  jmpbuf-offsets.h  jmpbuf-unwind.h  ldsodefs.h  libc-start.h  libc-tls.c  lstat.c  lstat64.c  machine-gmon.h  math_private.h  memusage.h  mknod.c  mknodat.c  pthread_atfork.c  setjmp.S  sfp-machine.h  sotruss-lib.c  stackinfo.h  (+6 more)
sysdeps/loongarch/fpu/: e_sqrt.c  e_sqrtf.c  fedisblxcpt.c  feenablxcpt.c  fegetexcept.c  fenv_libc.h  fesetmode.c  fraiseexcpt.c  s_copysign.c  s_copysignf.c  s_fmax.c  s_fmaxf.c  s_fmin.c  s_fminf.c  s_llrint.c  s_llrintf.c  s_logb.c  s_logbf.c  s_lrint.c  s_lrintf.c  s_rint.c  s_rintf.c
sysdeps/loongarch/lp64/: memset.S  s_cosf.S  s_sinf.S  strchrnul.S  strcmp.S
sysdeps/loongarch/lp64/multiarch/: Makefile  ifunc-impl-list.c  ifunc-lasx.h  ifunc-memchr.h  ifunc-memrchr.h  ifunc-stpcpy.h  memchr-aligned.S  memchr-lasx.S  memchr-lsx.S  memchr.c  memcmp-aligned.S  memcmp-lasx.S  memcmp-lsx.S  memcmp.c  memcpy-aligned.S  memcpy-lasx.S  memcpy-unaligned.S  memcpy.c  memmove-aligned.S  memmove-lasx.S  memmove-lsx.S  memmove.c  (+53 more)
sysdeps/loongarch/nptl/: Makefile  pthread-offsets.h  pthreaddef.h  tls.h
sysdeps/loongarch/sys/: asm.h  regdef.h
(+439 files in other folders)
